--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  command = "cp templates/index.html ./ && gunicorn app:app"  # Copies index.html to root and starts the Flask app using Gunicorn
-  publish = "."  # Specify the root directory as the publish folder
+  command = "pip install -r requirements.txt && cp templates/index.html ./ && waitress-serve --host=0.0.0.0 --port=$PORT app:app"
+  publish = "."
 
 [build.environment]
-  FLASK_ENV = "production"  # Set the Flask environment to production
-  PYTHON_VERSION = "3.12.3"    # Specify the Python version (adjust if needed)
+  FLASK_ENV = "production"
+  PYTHON_VERSION = "3.12.3"
