--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ soupsieve==2.5
 trio==0.26.2
 trio-websocket==0.11.1
 urllib3==1.26.20
+waitress==3.0.0
 webencodings==0.5.1
 Werkzeug==3.0.4
 wsproto==1.2.0
