--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pip install -r requirements.txt && cp templates/index.html ./ && waitress-serve --host=0.0.0.0 --port=$PORT app:app"
+  command = "pip install -r requirements.txt && cp templates/index.html ./ && waitress-serve --host=0.0.0.0 --port=5000 app:app"
   publish = "."
 
 [build.environment]
