--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ mysql-connector-python==9.0.0
 outcome==1.3.0.post0
 packaging==24.1
 pycparser==2.22
+pyfiglet==1.0.2
 PySocks==1.7.1
 requests==2.31.0
 selenium==4.5.0
