--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
-gunicorn==23.0.0
 h11==0.14.0
 html5lib==1.1
 idna==3.6
@@ -34,3 +33,4 @@ waitress==3.0.0
 webencodings==0.5.1
 Werkzeug==3.0.4
 wsproto==1.2.0
+gunicorn
